[package]
name = "rust_2d_engine"
version = "0.1.0"
edition = "2021"
authors = ["Zion Sohn"]
description = "A simple Rust 2D engine based on canvas and WASM"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
web-sys = { version = "0.3.60", features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
  "console",
  "CanvasRenderingContext2d",
  "Performance",
  "EventTarget",
  "MouseEvent",
  "Event",
  "AddEventListenerOptions",
  "DomRect",
]}
console_error_panic_hook = "0.1.7"